# stock-portfolio-analyzer

./: pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: sample_transactions.csv
src/portfolio/: main.py
src/portfolio/core/: calculator.py  market_data.py  metrics.py  models.py
src/portfolio/tabs/: performance.py  snapshot.py  transactions.py
src/portfolio/utils/: csv_parser.py
