[project]
name = "stock-portfolio-analyzer"
version = "0.1.0"
description = "Stock market portfolio analyzer"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
]

[project.scripts]
app = "portfolio.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]
